...
    <string name="app_name">shared</string>

    <string name="menu_settings">Settings</string>
    <string name="close">Close</string>
    <string name="menu_help">About</string>
    <string name="menu_feedback">Send feedback</string>
    <string name="reminder_off_title">Press timer to start work</string>
    <string name="eula_accept">I accept</string>
    <string name="eula_reject">No thanks</string>
    <string name="intro_title">Hello!</string>
    <string name="intro_description">You have opened Rest reminder - an app, that reminds users to take frequent breaks between work.</string>
    <string name="intro_give_it_a_go">You can start using the app right away with factory settings (work - 45 min, rest - 15 min).</string>
    <string name="intro_go_to_settings">You can personalize the app for your needs in Settings</string>
    <string name="intro_go_to_manual">(Full feature description and instructions can be found in a user guide)</string>
...
    <string name="counter_on">Rest reminder is on</string>
    <string name="notification_sample_text">Sample text for period end notification</string>
    <string name="close_notification">Close</string>
    <string name="on_work_period">Work</string>
    <string name="on_rest_period">Rest</string>
    <string name="extend">extend</string>
    <string name="description_extended">extended %1$d times</string>
    <string name="description_turn_off">To turn off, press and hold timer</string>
    <string name="description_extended_one_time">extended</string>
    <string name="extend_current_period">extend period</string>
    <string name="extend_period_one_option">extend by %1$d min</string>
    <string name="toast_period_end_forced">The current period was forced to end</string>
    <string name="toast_period_end_extended">The current period end is extended</string>
    <string name="toast_period_end_extended_previous">The previous period has been extended</string>
    <string name="hint_dialog_text">i</string>
...
    <string name="pref_mode_title">Reminder mode</string>
    <string name="pref_mode_title_first_part">Reminder mode: %1$s</string>
    <string name="pref_mode_title_manual">manual</string>
    <string name="pref_mode_title_automatic">automatic</string>
    <string name="pref_mode_summary_automatic">Following periods start automatically</string>
    <string name="pref_mode_summary_manual">Periods are started after user confirmation</string>
    <string name="pref_mode_key">reminder_mode</string>
    <string name="pref_category_basic_settings_key">basic_settings_category</string>
    <string name="pref_category_basic_settings_title">General settings</string>
    <string name="pref_screen_periods_key">screen_period_length</string>
    <string name="pref_screen_periods_title">Work and rest period settings</string>
    <string name="pref_screen_extension_title">Period extension settings</string>
    <string name="pref_work_period_length_key">work_period_length</string>
    <string name="pref_work_period_length_title">Work period length</string>
    <string name="pref_work_period_length_dialog_text">Set period length in hours and minutes</string>
    <string name="short_period_warning">Note: Selecting a period length, that is shorter than 10 minutes, can result in delayed period end notifications. If such issues occur, try disabling battery optimisation for Rest Reminder in device settings.</string>
    <string name="pref_rest_period_length_key">rest_period_length</string>
    <string name="pref_rest_period_length_title">Rest period length</string>
    <string name="pref_rest_period_length_dialog_text">Set period length in hours and minutes</string>
    <string name="pref_work_period_start_sound_key">work_period_start_sound</string>
    <string name="pref_work_period_start_sound_title">Work period start sound</string>
    <string name="pref_rest_period_start_sound_key">rest_period_start_sound</string>
    <string name="pref_rest_period_start_sound_title">Rest period start sound</string>
...
    <string name="pref_category_features_title">Feature settings</string>
    <string name="pref_category_period_settings_key">period_settings_category</string>
    <string name="pref_category_extension_settings_key">extension_settings_category</string>
    <string name="pref_approx_time_sound_key">approx_time_sound</string>
    <string name="pref_approx_time_sound_title">Proximity alarm sound</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="pref_end_period_key">enable_end_period</string>
    <string name="pref_end_period_title">End current period</string>
    <string name="pref_end_period_summary">Force current period to end</string>
    <string name="pref_enable_approx_notification_key">enable_approx_notification_key</string>
    <string name="pref_enable_approx_notification_title">Proximity alarm</string>
    <string name="pref_enable_approx_notification_summary">Sound alarm notifies about the upcoming period end</string>
    <string name="pref_approx_notification_length_key">approx_notification_length_key</string>
...
    <string name="pref_approx_notification_length_summary">Current value:</string>
    <string name="pref_approx_notification_length_dialog_text">Set the amount of time in minutes and seconds</string>
    <string name="pref_enable_vibrate_key">enable_end_vibrate</string>
    <string name="pref_enable_vibrate_title">Enable vibration</string>
    <string name="pref_screen_period_extend_key">pref_screen_period_extend_key</string>
    <string name="pref_screen_period_extend_title">Extend period settings</string>
    <string name="pref_enable_extend_key">enable_end_extend</string>
    <string name="pref_enable_extend_summary">Extend current period</string>
    <string name="pref_enable_extend_title">Extend period</string>
    <string name="pref_enable_short_periods_key">enable_short_periods_extend</string>
    <string name="pref_enable_short_periods_summary">Periods can be less than 10 minutes short</string>
    <string name="pref_enable_short_periods_title">Allow short periods</string>
    <string name="pref_period_extend_length_key">end_extend_length_key</string>
    <string name="pref_period_extend_length_title">Extension base length</string>
    <string name="pref_period_extend_length_summary">Set the period end extend duration in minutes</string>
    <string name="pref_period_extend_length_dialog_text">Set the extend in minutes (1&#8211;120)</string>
    <string name="pref_period_extend_options_key">end_extend_options_key</string>
    <string name="pref_period_extend_options_title">Amount of extension options</string>
    <string name="pref_period_extend_options_dialog_text">Choose the amount of extend options</string>
    <string name="pref_screen_approx_settings_key">pref_screen_approx_settings</string>
    <string name="pref_screen_approx_settings_title">Proximity alarm settings</string>
    <string name="pref_show_is_on_icon_key">pref_show_is_on_icon</string>
    <string name="pref_show_is_on_icon_title">Show icon on a status bar</string>
...
